[Windows] Produce correct DomKey for NumPad when combined with Shift/NumLock

The expected behavior for Shift, NumLock and NumPad should be (use NumPad4 as an example):
  NumPad4 => "ArrowLeft"
  Shift+NumPad4 => "ArrowLeft"
  NumLock+NumPad4 => "4"
  Shift+NumLock+NumPad4 => "ArrowLeft"

However there is an implementation problem due to Windows' fake-shift-release behaviour, which means we cannot use DomCode+Flags to uniquely determine DomKey.
(Cannot distinguish NumLock+NumPad4 and Shift+NumLock+NumPad4)

The alternative approach is to use KeyboardCode instead DomCode because Shift modifier is not reliable
when NumLock is on.

/*
Example for Windows' fake-shift-release behaviour:
  With NumLock on,
	1. press Shift
	2. press NumPad4
	3. release NumPad4
	4. release Shift
will produce:
-----
EventType	DomCode		Shift	NumLock
-----
keydown 	ShiftLeft	true	true
keyup		ShiftLeft	false	true
keydown		Numpad4		false	true  <- Shift is false?!
keyup		NumPad4		false	true
keydown		ShiftLeft	true	true
keyup		ShiftLeft	false	true
*/

BUG=594552

Review URL: https://codereview.chromium.org/1776673007

Cr-Commit-Position: refs/heads/master@{#382574}

Former-commit-id: 866b9e1c3542ed922285cf06b7d60f89758b20b5