ui/events/keycodes/platform_key_map_win.h
@@ -9,8 +9,9 @@
 
 #include <unordered_map>
 
+#include "base/event_types.h"
 #include "base/hash.h"
-#include "ui/events/events_base_export.h"
+#include "ui/events/events_export.h"
 #include "ui/events/keycodes/dom/dom_key.h"
 #include "ui/events/keycodes/keyboard_codes_win.h"
 
@@ -18,26 +19,30 @@ namespace ui {
 
 enum class DomCode;
 
-class EVENTS_BASE_EXPORT PlatformKeyMap {
+class EVENTS_EXPORT PlatformKeyMap {
  public:
   // Create and load key map table with specified keyboard layout.
+  // Visible for testing.
   explicit PlatformKeyMap(HKL layout);
   ~PlatformKeyMap();
 
-  // Returns the DomKey 'meaning' of |code| in the context of specified
-  // |ui_event_flags| and stored keyboard layout.
-  DomKey DomCodeAndFlagsToDomKey(DomCode code,
-                                 int ui_event_flags) const;
-
-  // Returns the DomKey 'meaning' of |code| in the context of specified
-  // |ui_event_flags| and the keyboard layout of current thread.
+  // Returns the DOM KeyboardEvent key from a native event and the keyboard
+  // layout of current thread.
   // Updates a per-thread key map cache whenever the layout changes.
-  static DomKey DomCodeAndFlagsToDomKeyStatic(
-      DomCode code,
-      int ui_event_flags);
+  static DomKey DomKeyFromNative(const base::NativeEvent& native_event);
 
  private:
+  friend class PlatformKeyMapTest;
+
   PlatformKeyMap();
+
+  // TODO(chongz): Expose this function when we need to access separate layout.
+  // Returns the DomKey 'meaning' of |code| in the context of specified
+  // |ui_event_flags| and stored keyboard layout.
+  // |key_code| will only be used for NumPad.
+  DomKey DomKeyFromNativeImpl(DomCode code,
+                              KeyboardCode key_code,
+                              int ui_event_flags) const;
 
   // TODO(chongz): Expose this function in response to WM_INPUTLANGCHANGE.
   void UpdateLayout(HKL layout);
